WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177950
RenderMathMLFenced should not hold a raw pointer to RenderMathMLFencedOperator
https://bugs.webkit.org/show_bug.cgi?id=177950
Summary
RenderMathMLFenced should not hold a raw pointer to RenderMathMLFencedOperator
alan
Reported
2017-10-05 10:43:20 PDT
The child renderer object could get stale.
Attachments
Patch
(3.29 KB, patch)
2017-10-05 10:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-05 10:45:36 PDT
<
rdar://problem/34837002
>
alan
Comment 2
2017-10-05 10:52:37 PDT
Created
attachment 322855
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-05 11:48:39 PDT
Comment on
attachment 322855
[details]
Patch Clearing flags on attachment: 322855 Committed
r222922
: <
http://trac.webkit.org/changeset/222922
>
WebKit Commit Bot
Comment 4
2017-10-05 11:48:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug