RenderMathMLFenced should not hold a raw pointer to RenderMathMLFencedOperator https://bugs.webkit.org/show_bug.cgi?id=177950 <rdar://problem/34837002>

Reviewed by Antti Koivisto.

Even though RenderMathMLFencedOperator is a child renderer, it's lifetime is not explicitly managed by
RenderMathMLFenced.

Covered by existing test cases.

* rendering/mathml/RenderMathMLFenced.cpp:
(WebCore::RenderMathMLFenced::RenderMathMLFenced):
(WebCore::RenderMathMLFenced::makeFences):
(WebCore::RenderMathMLFenced::addChild):
* rendering/mathml/RenderMathMLFenced.h:


Canonical link: https://commits.webkit.org/194195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222922 268f45cc-cd09-0410-ab3c-d52691b4dbfc